--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -59,7 +59,7 @@ runs:
         # install test packages
         conda install -y pytest
         if [ "${{ inputs.rocm }}" = "ON" ]; then
-          sudo apt-get install -y pip3
+          sudo apt-get install -y python3-pip
           pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.1
         elif [ "${{ inputs.gpu }}" = "ON" ]; then
           conda install -y -q pytorch pytorch-cuda=12.4 -c pytorch -c nvidia/label/cuda-12.4.0
