Update faiss python CMakeLists.txt to build external module

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -88,6 +88,8 @@ if(FAISS_OPT_LEVEL STREQUAL "sve")
   target_link_libraries(faiss_test PRIVATE faiss_sve)
 endif()
 
+target_link_libraries(faiss_test PUBLIC faiss_example_external_module)
+
 include(FetchContent)
 FetchContent_Declare(
   googletest
