--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -143,11 +143,11 @@ runs:
       run: |
         export GTEST_OUTPUT="xml:$(realpath .)/test-results/googletest/"
         make -C build test
-    # - name: C++ perf benchmarks
-    #   shell: bash
-    #   if: inputs.rocm == 'OFF'
-    #   run: |
-    #     find ./build/perf_tests/ -executable -type f -name "bench*" -exec '{}' -v \;
+    - name: C++ perf benchmarks
+      shell: bash
+      if: inputs.rocm == 'OFF'
+      run: |
+        find ./build/perf_tests/ -executable -type f -name "bench*" -exec '{}' -v \;
     - name: Install Python extension
       shell: bash
       working-directory: build/faiss/python
