--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -32,7 +32,17 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 cmake=3.26.4 make swig numpy scipy pytest gflags
+        conda install -y -q python=3.11 make swig numpy scipy pytest gflags
+
+        mkdir /tmp/cmake-build
+        pushd /tmp/cmake-build
+        git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
+        mkdir cmake/build
+        cd cmake/build
+        ../bootstrap -- -DCMAKE_BUILD_TYPE=Release
+        make -j8
+        make install
+        popd
 
         # install base packages for ARM64
         if [ "${{ runner.arch }}" = "ARM64" ]; then
