--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,7 +178,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
   linux-x86_64-GPU-packages-CUDA-11-4-4:
     name: Linux x86_64 GPU packages (CUDA 11.4.4)
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
@@ -197,7 +197,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
           cuda: "11.4.4"
   linux-x86_64-GPU-RAFT-packages-CUDA11-8-0:
     name: Linux x86_64 GPU w/ RAFT packages (CUDA 11.8.0)
@@ -216,7 +216,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
           raft: "ON"
           cuda: "11.8.0"
   linux-x86_64-GPU-packages-CUDA-12-1-1:
@@ -236,7 +236,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
           cuda: "12.1.1"
   linux-x86_64-GPU-RAFT-packages-CUDA12-1-1:
     name: Linux x86_64 GPU w/ RAFT packages (CUDA 12.1.1)
@@ -255,7 +255,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
           raft: "ON"
           cuda: "12.1.1"
   windows-x86_64-packages:
@@ -273,7 +273,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
   osx-arm64-packages:
     name: OSX arm64 packages
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
@@ -289,7 +289,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
   linux-arm64-packages:
     name: Linux arm64 packages
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
@@ -305,4 +305,4 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
         with:
-          label: staging
+          label: main
