--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -32,14 +32,14 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 make swig numpy scipy pytest gflags
+        conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl
 
         mkdir /tmp/cmake-build
         pushd /tmp/cmake-build
         git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
         mkdir cmake/build
         cd cmake/build
-        ../bootstrap -- -DCMAKE_BUILD_TYPE=Release -DCMAKE_USE_OPENSSL=OFF
+        ../bootstrap -- -DCMAKE_BUILD_TYPE=Release
         make -j8
         popd
 
