--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -32,16 +32,18 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl
+        conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl cmake=3.26.4
 
         mkdir /tmp/cmake-build
         pushd /tmp/cmake-build
         git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
         mkdir cmake/build
         cd cmake/build
-        ../bootstrap -- -DCMAKE_BUILD_TYPE=Release -DCMAKE_FIND_ROOT_PATH="$CONDA_PREFIX" --debug-find
+        cmake .. -- -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="$CONDA_PREFIX"
         make -j8
         popd
+
+        conda uninstall cmake
 
         # install base packages for ARM64
         if [ "${{ runner.arch }}" = "ARM64" ]; then
