--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -34,8 +34,7 @@ runs:
 
         conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl cmake=3.26.4
 
-        eval $(conda shell.bash hook)
-        conda activate
+        source activate
         mkdir /tmp/cmake-build
         pushd /tmp/cmake-build
         git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
@@ -44,7 +43,7 @@ runs:
         cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="$CONDA_PREFIX" --debug-find
         make -j8
         popd
-        conda deactivate
+        source deactivate
 
         conda uninstall cmake
 
