--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -32,9 +32,9 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl cmake=3.26.4
+        conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl
 
-        source activate
+        sudo apt-get install libssl-dev
         mkdir /tmp/cmake-build
         pushd /tmp/cmake-build
         git clone -b v3.30.5 https://gitlab.kitware.com/cmake/cmake.git
@@ -43,9 +43,6 @@ runs:
         cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="$CONDA_PREFIX" --debug-find
         make -j8
         popd
-        source deactivate
-
-        conda uninstall cmake
 
         # install base packages for ARM64
         if [ "${{ runner.arch }}" = "ARM64" ]; then
