--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -32,7 +32,7 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        conda install -y -q python=3.11 make swig numpy scipy pytest gflags openssl
+        conda install -y -q python=3.11 make swig numpy scipy pytest gflags
 
         sudo apt-get update
         sudo apt-get install libssl-dev
