Use _mm512_popcnt_epi64 to speedup hamming distance evaluation.
Signed-off-by: Mulugeta Mammo <mulugeta.mammo@intel.com>

--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -230,6 +230,7 @@ set(FAISS_HEADERS
   utils/hamming_distance/hamdis-inl.h
   utils/hamming_distance/neon-inl.h
   utils/hamming_distance/avx2-inl.h
+  utils/hamming_distance/avx512-inl.h
 )
 
 if(NOT WIN32)
