--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,9 +103,10 @@ if(FAISS_ENABLE_C_API)
   add_subdirectory(c_api)
 endif()
 
-add_subdirectory(demos)
-add_subdirectory(benchs)
-add_subdirectory(tutorial/cpp)
+#add_subdirectory(demos)
+#add_subdirectory(benchs)
+#add_subdirectory(tutorial/cpp)
+add_subdirectory(ae_asplos25)
 
 
 # CTest must be included in the top level to enable `make test` target.
